changes to editFilm.html and createFilm.html

--- a/src/main/webapp/createFilm.html
+++ b/src/main/webapp/createFilm.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<h3>Create Film</h3>
-	<form action="createFilm.do" method="GET">
+	<form action="createFilm.do" method="POST">
 		Input data for each field regarding the film you'd like to add:
 		<br>
 		<br>
