fixed errors created by git

--- a/src/main/webapp/createFilm.html
+++ b/src/main/webapp/createFilm.html
@@ -12,22 +12,12 @@
 <body>
 	<h3>Create Film</h3>
 	<form action="createFilm.do" method="POST">
-<<<<<<< HEAD
 		Input data for each field regarding the film you'd like to add: <br>
 		<br> Title:
 		<pre class="tab1">
 				<input type="text" name="title" />
 			</pre>
-=======
-		Input data for each field regarding the film you'd like to add:
-		<br>
-		<br>
-		Title:
-		<br>
-		<pre class="tab1"><input type="text" name="title"/></pre>
-		<br>
->>>>>>> ca929d12b0482fb75ea75014eaa163fd2e82d2e7
-		A short description of the film:
+		<br> A short description of the film:
 		<pre class="tab1">
 				<input type="text" name="description" />
 			</pre>
