updated controller create film method

--- a/src/main/webapp/createFilm.html
+++ b/src/main/webapp/createFilm.html
@@ -25,7 +25,7 @@
 		<pre class="tab1">
 				<input type="text" name="releaseYear" />
 			</pre>
-		The language the film is recorded in:
+		The language ID:
 		<pre class="tab1">
 				<input type="text" name="languageId" />
 			</pre>
@@ -46,6 +46,10 @@
 				<input type="text" name="replacementCost" />
 			</pre>
 		Rating (1-5):
+		<pre class="tab1">
+				<input type="text" name="rating" />
+			</pre>
+		Special Features:
 		<pre class="tab1">
 				<input type="text" name="rating" />
 			</pre>
