--- a/src/main/webapp/editFilm.html
+++ b/src/main/webapp/editFilm.html
@@ -12,48 +12,47 @@
 <body>
 	<h3>Edit Film</h3>
 	<form action="editFilm.do" method="POST">
-		Input data for each field regarding the film you'd like to add:
+		Input data for each field regarding the film you'd like to edit:
 		<br>
-    FilmID:
-    <br>
-		<pre class="tab1"><input type="number" name="id"/></pre>
 		<br>
-    <br>
-
-    
-		Title:
+		<b>Enter Existing FilmID:</b>
+    	<br>
+    	<input type="number" name="id"/>
+    	<br>
+    	<br>
+    	<b>Enter New Title:</b>
 		<br>
-		<pre class="tab1"><input type="text" name="title"/></pre>
+		<input type="text" name="title"/>
 		<br>
-		A short description of the film:
+		<b>Enter New Description:</b>
 		<br>
 		<input type="text" name="description"/> 
 		<br>
-		The four digit year the film was released:
+		<b>Enter New Release Year:</b>
 		<br>
 		<input type="text" name="releaseYear"/> 
 		<br>
-		The language the film is recorded in:
+		<b>Enter New Language ID:</b>
 		<br>
 		<input type="text" name="languageId"/> 
 		<br>
-		The rental Duration in total full days:
+		<b>Enter New Rental Duration (in days):</b>
 		<br>
 		<input type="text" name="rentalDuration"/> 
 		<br>
-		The rental rate:
+		<b>Enter New Rental Rate:</b>
 		<br>
 		<input type="text" name="rentalRate"/> 
 		<br>
-		Film length:
+		<b>Enter New Film length:</b>
 		<br>
 		<input type="text" name="length"/> 
 		<br>
-		Film replacement cost:
+		<b>Enter New Film Replacement Cost:</b>
 		<br>
 		<input type="text" name="replacementCost"/> 
 		<br>
-		Rating (1-5):
+		<b>Enter New Rating (1-5):</b>
 		<br>
 		<input type="text" name="rating"/> 
 		<br>
