--- a/src/main/webapp/createFilm.html
+++ b/src/main/webapp/createFilm.html
@@ -15,42 +15,46 @@
 		Input data for each field regarding the film you'd like to add: <br>
 		<br> Title:
 		<pre class="tab1">
-				<input type="text" name="title" />
+				<input type="text" name="film.title" />
 			</pre>
 		<br> A short description of the film:
 		<pre class="tab1">
-				<input type="text" name="description" />
+				<input type="text" name="film.description" />
 			</pre>
 		The four digit year the film was released:
 		<pre class="tab1">
-				<input type="text" name="releaseYear" />
+				<input type="text" name="film.releaseYear" />
 			</pre>
-		The language the film is recorded in:
+		The language ID:
 		<pre class="tab1">
-				<input type="text" name="languageId" />
+				<input type="text" name="film.languageId" />
 			</pre>
 		The rental Duration in total full days:
 		<pre class="tab1">
-				<input type="text" name="rentalDuration" />
+				<input type="text" name="film.rentalDuration" />
 			</pre>
 		The rental rate:
 		<pre class="tab1">
-				<input type="text" name="rentalRate" />
+				<input type="text" name="film.rentalRate" />
 			</pre>
 		Film length:
 		<pre class="tab1">
-				<input type="text" name="length" />
+				<input type="text" name="film.length" />
 			</pre>
 		Film replacement cost:
 		<pre class="tab1">
-				<input type="text" name="replacementCost" />
+				<input type="text" name="film.replacementCost" />
 			</pre>
-		Rating (1-5):
+		Rating:
 		<pre class="tab1">
-				<input type="text" name="rating" />
+				<input type="text" name="film.rating" />
+			</pre>
+		Special Features:
+		<pre class="tab1">
+				<input type="text" name="film.specialFeatures" />
 			</pre>
 		<br> Hit the submit button below once you've filled all of the
-		fields. <br> <br> <input type="submit" value="Add Film" /><br>
+		fields. <br> <br> <input type="submit" value="film" /><br>
 		<br>
 	</form>
 	<a href=home.do>Return to Home</a>
