--- a/src/main/webapp/createFilm.html
+++ b/src/main/webapp/createFilm.html
@@ -49,10 +49,10 @@
 		<pre class="tab1">
 				<input type="text" name="film.rating" />
 			</pre>
-		Special Features:
+	<!-- 	Special Features:
 		<pre class="tab1">
 				<input type="text" name="film.specialFeatures" />
-			</pre>
+			</pre> -->
 		<br> Hit the submit button below once you've filled all of the
 		fields. <br> <br> <input type="submit" value="film" /><br>
 		<br>
