--- a/src/main/webapp/deleteFilm.html
+++ b/src/main/webapp/deleteFilm.html
@@ -1,5 +1,3 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-    pageEncoding="UTF-8"%>
 <!DOCTYPE html>
 <html>
 <head>
@@ -10,7 +8,7 @@
 	<h3>Films</h3>
 	<form action="deleteFilm.do" method="POST">
 		Film ID:
-		<input type="number" name="id"/> 
+		<input type="text" name="id"/> 
 		<input type="submit" value="delete film" />
 	</form>
 	<a href=home.do>Return to Home</a><br/>
