--- a/src/main/webapp/editFilm.html
+++ b/src/main/webapp/editFilm.html
@@ -52,7 +52,7 @@
 		<br>
 		<input type="text" name="replacementCost"/> 
 		<br>
-		<b>Enter New Rating (1-5):</b>
+		<b>Enter New Rating (G, PG, PG13, R, or NC17):</b>
 		<br>
 		<input type="text" name="rating"/> 
 		<br>
