--- a/src/main/webapp/editFilm.html
+++ b/src/main/webapp/editFilm.html
@@ -53,6 +53,7 @@
 		<input type="text" name="film.replacementCost"/> 
 		<br>
 		<br>
+		<input type="text" name="film.rating" />
 		<label for="rating">New Film Rating:</label> <br />
           <select class="film.rating" id="film.rating">
             <option value="">--</option>
@@ -64,6 +65,7 @@
           </select>
 		<br>
 		<br>
+		<input type="text" name="specialFeatures" />
 		<label for="film.specialFeatures">New Special Features:</label> <br />
           <select class="film.specialFeatures" id="film.specialFeatures">
             <option value="Trailers">Trailers</option>
