--- a/src/main/webapp/createFilm.html
+++ b/src/main/webapp/createFilm.html
@@ -45,7 +45,8 @@
 		<pre class="tab1">
 				<input type="text" name="replacementCost" />
 			</pre>
-		<label for="film.rating">Film Rating:</label> <br />
+		<input type="text" name="rating" />
+		<label for="rating">Film Rating:</label> <br />
           <select class="rating" id="rating">
             <option value="">--</option>
             <option value="G">G</option>
@@ -55,7 +56,8 @@
             <option value="NC17">NC17</option>
           </select>
 		<br>
-		<label for="film.specialFeatures">Special Features:</label> <br />
+		<input type="text" name="specialFeatures" />
+		<label for="specialFeatures">Special Features:</label> <br />
           <select class="specialFeatures" id="specialFeatures">
           	<option value="">--</option>
             <option value="Trailers">Trailers</option>
