--- a/src/main/webapp/editFilm.html
+++ b/src/main/webapp/editFilm.html
@@ -53,8 +53,10 @@
 		<input type="text" name="film.replacementCost"/> 
 		<br>
 		<br>
+		
 		<input type="text" name="film.rating" />
-		<label for="rating">New Film Rating:</label> <br />
+		
+		<!-- <label for="rating">New Film Rating:</label> <br />
           <select class="film.rating" id="film.rating">
             <option value="">--</option>
             <option value="G">G</option>
@@ -62,17 +64,17 @@
             <option value="PG13">PG13</option>
             <option value="R">R</option>
             <option value="NC17">NC17</option>
-          </select>
+          </select> -->
 		<br>
 		<br>
 		<input type="text" name="specialFeatures" />
-		<label for="film.specialFeatures">New Special Features:</label> <br />
+		<!-- <label for="film.specialFeatures">New Special Features:</label> <br />
           <select class="film.specialFeatures" id="film.specialFeatures">
             <option value="Trailers">Trailers</option>
             <option value="Commentaries">Commentaries</option>
             <option value="Deleted Scenes">Deleted Scenes</option>
             <option value="Behind the Scenes">Behind the Scenes</option>
-          </select>
+          </select> -->
 		
 		<br>
 		<br>
