--- a/src/main/webapp/createFilm.html
+++ b/src/main/webapp/createFilm.html
@@ -45,8 +45,10 @@
 		<pre class="tab1">
 				<input type="text" name="replacementCost" />
 			</pre>
+		<pre class="tab1">
 		<input type="text" name="rating" />
-		<label for="rating">Film Rating:</label> <br />
+		</pre>
+	<!-- 	<label for="rating">Film Rating:</label> <br />
           <select class="rating" id="rating">
             <option value="">--</option>
             <option value="G">G</option>
@@ -54,17 +56,19 @@
             <option value="PG13">PG13</option>
             <option value="R">R</option>
             <option value="NC17">NC17</option>
-          </select>
+          </select> -->
 		<br>
+		<pre>
 		<input type="text" name="specialFeatures" />
-		<label for="specialFeatures">Special Features:</label> <br />
+		</pre>
+		<!-- <label for="specialFeatures">Special Features:</label> <br />
           <select class="specialFeatures" id="specialFeatures">
           	<option value="">--</option>
             <option value="Trailers">Trailers</option>
             <option value="Commentaries">Commentaries</option>
             <option value="Deleted Scenes">Deleted Scenes</option>
             <option value="Behind the Scenes">Behind the Scenes</option>
-          </select>
+          </select> -->
 		<br> Hit the submit button below once you've filled all of the
 		fields. <br> <br> <input type="submit" value="film" /><br>
 		<br>
