--- a/src/main/webapp/editFilm.html
+++ b/src/main/webapp/editFilm.html
@@ -53,9 +53,9 @@
 		<input type="text" name="film.replacementCost"/> 
 		<br>
 		<br>
-		
+		<b>Enter New Film Rating:</b>
 		<input type="text" name="film.rating" />
-		
+		<br>
 		<!-- <label for="rating">New Film Rating:</label> <br />
           <select class="film.rating" id="film.rating">
             <option value="">--</option>
@@ -67,7 +67,8 @@
           </select> -->
 		<br>
 		<br>
-		<input type="text" name="specialFeatures" />
+		<b>Enter New Special Features</b>
+		<input type="text" name="film.specialFeatures" />
 		<!-- <label for="film.specialFeatures">New Special Features:</label> <br />
           <select class="film.specialFeatures" id="film.specialFeatures">
             <option value="Trailers">Trailers</option>
