--- a/src/main/webapp/editFilmLanding.html
+++ b/src/main/webapp/editFilmLanding.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <h3>Films</h3>
-	<form action="editFilm.do" method="GET">
+	<form action="editFilmLanding.do" method="POST">
 		Film ID:
 		<input type="text" name="id"/> 
 		<input type="submit" value="film edit" />
